--- a/index.html
+++ b/index.html
@@ -5,37 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main page</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/common.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Шапка сайту-->
     <header>
-      <nav>
-        <a href="./index.html"
-          ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a
-        >
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link current">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="logo"
+            ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a
+          >
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="link current">Студія</a></li>
+            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li><a href="" class="link">Контакти</a></li>
+          </ul>
+        </nav>
 
-      <ul class="list head-contacts">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+        <ul class="list head-contacts">
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </div>
     </header>
 
     <main>
@@ -47,25 +48,27 @@
 
       <!--Переваги компанії-->
       <section class="section">
-        <h2 class="section-title">Company advantages</h2>
-        <ul class="features list">
-          <li>
-            <h3 class="title">Увага до деталей</h3>
-            <p>Ідейні міркування, а також початок щоденної роботи з формування позиції.</p>
-          </li>
-          <li>
-            <h3 class="title">Пунктуальність</h3>
-            <p>Задачі з організації роботи, включаючи навчання персоналу.</p>
-          </li>
-          <li>
-            <h3 class="title">Планування</h3>
-            <p>Головним чином консультування з широким інструментарієм найкращих практик.</p>
-          </li>
-          <li>
-            <h3 class="title">Сучасні технології</h3>
-            <p>Важливий і значущий засіб для досягнення запланованих цілей.</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Company advantages</h2>
+          <ul class="features list">
+            <li>
+              <h3 class="title">Увага до деталей</h3>
+              <p>Ідейні міркування, а також початок щоденної роботи з формування позиції.</p>
+            </li>
+            <li>
+              <h3 class="title">Пунктуальність</h3>
+              <p>Задачі з організації роботи, включаючи навчання персоналу.</p>
+            </li>
+            <li>
+              <h3 class="title">Планування</h3>
+              <p>Головним чином консультування з широким інструментарієм найкращих практик.</p>
+            </li>
+            <li>
+              <h3 class="title">Сучасні технології</h3>
+              <p>Важливий і значущий засіб для досягнення запланованих цілей.</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Сфери роботи компанії-->
