Adding padding for Hero

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     </header>
 
     <main>
-      <!--Герой-->
+      <!--Hero-->
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення<br />для вашого бізнесу</h1>
         <button type="button" class="button">Заказати послугу</button>
       </section>
 
-      <!--Переваги компанії-->
+      <!--Features-->
       <section class="section">
         <div class="container">
           <h2 class="section-title">Company advantages</h2>
