--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </section>
 
       <!--Features-->
-      <section class="section">
+      <section class="section section-features">
         <div class="container">
           <h2 class="section-title">Company advantages</h2>
           <ul class="features list">
