--- a/index.html
+++ b/index.html
@@ -71,20 +71,22 @@
         </div>
       </section>
 
-      <!--Сфери роботи компанії-->
-      <section class="section">
-        <h2 class="section-title">Чим ми займаємось</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/box1.jpg" alt="Десктопни застосунки" width="370" />
-          </li>
-          <li>
-            <img src="./images/box2.jpg" alt="Мобільні застосунки" width="370" />
-          </li>
-          <li>
-            <img src="./images/box3.jpg" alt="Дизайнерські рішення" width="370" />
-          </li>
-        </ul>
+      <!--Areas \\  Сфери роботи компанії-->
+      <section class="section section-area">
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємось</h2>
+          <ul class="list">
+            <li>
+              <img src="./images/box1.jpg" alt="Десктопни застосунки" width="370" />
+            </li>
+            <li>
+              <img src="./images/box2.jpg" alt="Мобільні застосунки" width="370" />
+            </li>
+            <li>
+              <img src="./images/box3.jpg" alt="Дизайнерські рішення" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Команда-->
