--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </section>
 
       <!--Features-->
-      <section class="section section-features">
+      <section class="section-features">
         <div class="container">
           <h2 class="section-title">Company advantages</h2>
           <ul class="features list">
@@ -72,7 +72,7 @@
       </section>
 
       <!--Areas \\  Сфери роботи компанії-->
-      <section class="section section-area">
+      <section class="section-area">
         <div class="container">
           <h2 class="section-title">Чим ми займаємось</h2>
           <ul class="list">
@@ -90,61 +90,65 @@
       </section>
 
       <!--Команда-->
-      <section class="section team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team list">
-          <li>
-            <img
-              src="./images/igor.jpg"
-              alt="Young man, around 35 years old with glasses and beard in burgundy shirt"
-              width="270"
-            />
-            <h3 class="name">Ігор Дем'яненко</h3>
-            <p class="profession">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/olga.jpg"
-              alt="Young women with glasses, light hair till shoulders"
-              width="270"
-            />
-            <h3 class="name">Ольга Репіна</h3>
-            <p class="profession">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/nikolay.jpg" alt="Young smiling man in white shirt" width="270" />
-            <h3 class="name">Микола Тарасов</h3>
-            <p class="profession">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/mikhail.jpg"
-              alt="Young man in glasses and black t-shirt"
-              width="270"
-            />
-            <h3 class="name">Михайло Єрмаков</h3>
-            <p class="profession">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section-team">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team list">
+            <li>
+              <img
+                src="./images/igor.jpg"
+                alt="Young man, around 35 years old with glasses and beard in burgundy shirt"
+                width="270"
+              />
+              <h3 class="name">Ігор Дем'яненко</h3>
+              <p class="profession">Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="./images/olga.jpg"
+                alt="Young women with glasses, light hair till shoulders"
+                width="270"
+              />
+              <h3 class="name">Ольга Репіна</h3>
+              <p class="profession">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="./images/nikolay.jpg" alt="Young smiling man in white shirt" width="270" />
+              <h3 class="name">Микола Тарасов</h3>
+              <p class="profession">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/mikhail.jpg"
+                alt="Young man in glasses and black t-shirt"
+                width="270"
+              />
+              <h3 class="name">Михайло Єрмаков</h3>
+              <p class="profession">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--Footer-->
     <footer class="footer">
-      <a href="./index.html"
-        ><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
-      >
-      <address>
-        <ul class="list">
-          <li>
-            <a href="https://goo.gl/maps/LaYwSsmEuTicvmq38" target="_blank" class="adress"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li><a href="mailto:info@example.com" class="ftr-contacts">info@example.com</a></li>
-          <li><a href="tel:+380991111111" class="ftr-contacts">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html"
+          ><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
+        >
+        <address>
+          <ul class="list">
+            <li>
+              <a href="https://goo.gl/maps/LaYwSsmEuTicvmq38" target="_blank" class="adress"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li><a href="mailto:info@example.com" class="ftr-contacts">info@example.com</a></li>
+            <li><a href="tel:+380991111111" class="ftr-contacts">+38 099 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
