--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </section>
 
       <!--Features-->
-      <section class="section-features">
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Company advantages</h2>
           <ul class="features list">
@@ -72,7 +72,7 @@
       </section>
 
       <!--Areas \\  Сфери роботи компанії-->
-      <section class="section-area">
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Чим ми займаємось</h2>
           <ul class="list">
@@ -89,8 +89,8 @@
         </div>
       </section>
 
-      <!--Команда-->
-      <section class="section-team">
+      <!--Team-->
+      <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team list">
