--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
         <a href="./index.html"
           ><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
         >
-        <address>
+
+        <address class="ftr-address">
           <ul class="list">
             <li>
               <a href="https://goo.gl/maps/LaYwSsmEuTicvmq38" target="_blank" class="adress"
