--- a/portfolio.html
+++ b/portfolio.html
@@ -20,21 +20,23 @@
   <body>
     <!--Шапка сайту-->
     <header>
-      <nav>
-        <a href="./index.html"
-          ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a
-        >
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="logo"
+            ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a
+          >
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="link current">Студія</a></li>
+            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li><a href="" class="link">Контакти</a></li>
+          </ul>
+        </nav>
 
-      <ul class="list head-contacts">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+        <ul class="list head-contacts">
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </div>
     </header>
 
     <main class="portfolio">
@@ -155,20 +157,23 @@
 
     <!--Footer-->
     <footer class="footer">
-      <a href="./index.html"
-        ><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
-      >
-      <address>
-        <ul class="list">
-          <li>
-            <a href="https://goo.gl/maps/LaYwSsmEuTicvmq38" target="_blank" class="adress"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li><a href="mailto:info@example.com" class="ftr-contacts">info@example.com</a></li>
-          <li><a href="tel:+380991111111" class="ftr-contacts">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html"
+          ><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
+        >
+
+        <address class="ftr-address">
+          <ul class="list">
+            <li>
+              <a href="https://goo.gl/maps/LaYwSsmEuTicvmq38" target="_blank" class="adress"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li><a href="mailto:info@example.com" class="ftr-contacts">info@example.com</a></li>
+            <li><a href="tel:+380991111111" class="ftr-contacts">+38 099 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
