Adding .container to Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,116 +42,122 @@
     <main class="portfolio">
       <!-- Навігація -->
       <section>
-        <h1>Portfolio</h1>
-        <ul class="filters list">
-          <li><button type="button" class="button secondary">Всі</button></li>
-          <li><button type="button" class="button secondary">Веб-сайти</button></li>
-          <li><button type="button" class="button secondary">Застосунки</button></li>
-          <li><button type="button" class="button secondary">Дизайн</button></li>
-          <li><button type="button" class="button secondary">Маркетинг</button></li>
-        </ul>
+        <div class="container">
+          <h1>Portfolio</h1>
+          <ul class="filters list">
+            <li><button type="button" class="button secondary">Всі</button></li>
+            <li><button type="button" class="button secondary">Веб-сайти</button></li>
+            <li><button type="button" class="button secondary">Застосунки</button></li>
+            <li><button type="button" class="button secondary">Дизайн</button></li>
+            <li><button type="button" class="button secondary">Маркетинг</button></li>
+          </ul>
 
-        <ul class="list">
-          <li>
-            <a href="">
-              <img
-                src="./images/Portfolio/technokryak.jpg"
-                alt="Ноутбук з відкритим сайтом"
-                width="370px"
-              />
-              <h2 class="project-name">Технокряк</h2>
-              <p class="filter-category">Веб-сайт</p>
-            </a>
-          </li>
+          <ul class="list">
+            <li>
+              <a href="">
+                <img
+                  src="./images/Portfolio/technokryak.jpg"
+                  alt="Ноутбук з відкритим сайтом"
+                  width="370px"
+                />
+                <h2 class="project-name">Технокряк</h2>
+                <p class="filter-category">Веб-сайт</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="">
-              <img
-                src="./images/Portfolio/new-orlean.jpg"
-                alt="Два баскетболісти борються за м'яч"
-                width="370px"
-              />
-              <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
-              <p class="filter-category">Дизайн</p>
-            </a>
-          </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/Portfolio/new-orlean.jpg"
+                  alt="Два баскетболісти борються за м'яч"
+                  width="370px"
+                />
+                <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+                <p class="filter-category">Дизайн</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="">
-              <img
-                src="./images/Portfolio/seafood.jpg"
-                alt="Logo: The Seafood restaurant, est. 2001"
-                width="370px"
-              />
-              <h2 class="project-name">Ресторан Seafood</h2>
-              <p class="filter-category">Застосунок</p>
-            </a>
-          </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/Portfolio/seafood.jpg"
+                  alt="Logo: The Seafood restaurant, est. 2001"
+                  width="370px"
+                />
+                <h2 class="project-name">Ресторан Seafood</h2>
+                <p class="filter-category">Застосунок</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="">
-              <img src="./images/Portfolio/prime.jpg" alt="Навушники повнорозмірні" width="370px" />
-              <h2 class="project-name">Проект Prime</h2>
-              <p class="filter-category">Маркетинг</p>
-            </a>
-          </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/Portfolio/prime.jpg"
+                  alt="Навушники повнорозмірні"
+                  width="370px"
+                />
+                <h2 class="project-name">Проект Prime</h2>
+                <p class="filter-category">Маркетинг</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="">
-              <img
-                src="./images/Portfolio/boxes.jpg"
-                alt="Дві коробки: біла та коричнева"
-                width="370px"
-              />
-              <h2 class="project-name">Проект Boxes</h2>
-              <p class="filter-category">Застосунок</p>
-            </a>
-          </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/Portfolio/boxes.jpg"
+                  alt="Дві коробки: біла та коричнева"
+                  width="370px"
+                />
+                <h2 class="project-name">Проект Boxes</h2>
+                <p class="filter-category">Застосунок</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="">
-              <img
-                src="./images/Portfolio/inspiration.jpg"
-                alt="Великий монітор-компю'ютер"
-                width="370px"
-              />
-              <h2 class="project-name">Inspiration has no Borders</h2>
-              <p class="filter-category">Веб-сайт</p>
-            </a>
-          </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/Portfolio/inspiration.jpg"
+                  alt="Великий монітор-компю'ютер"
+                  width="370px"
+                />
+                <h2 class="project-name">Inspiration has no Borders</h2>
+                <p class="filter-category">Веб-сайт</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="">
-              <img
-                src="./images/Portfolio/limited-adition.jpg"
-                alt="Розгорнутий журнал"
-                width="370px"
-              />
-              <h2 class="project-name">Видавництво Limited Edition</h2>
-              <p class="filter-category">Дизайн</p>
-            </a>
-          </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/Portfolio/limited-adition.jpg"
+                  alt="Розгорнутий журнал"
+                  width="370px"
+                />
+                <h2 class="project-name">Видавництво Limited Edition</h2>
+                <p class="filter-category">Дизайн</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="">
-              <img src="./images/Portfolio/lab.jpg" alt="Бірка: LAB EL TAG" width="370px" />
-              <h2 class="project-name">Проект LAB</h2>
-              <p class="filter-category">Маркетинг</p>
-            </a>
-          </li>
+            <li>
+              <a href="">
+                <img src="./images/Portfolio/lab.jpg" alt="Бірка: LAB EL TAG" width="370px" />
+                <h2 class="project-name">Проект LAB</h2>
+                <p class="filter-category">Маркетинг</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="">
-              <img
-                src="./images/Portfolio/growing-bus.jpg"
-                alt="Руки набирають текст на лептопі"
-                width="370px"
-              />
-              <h2 class="project-name">Growing Business</h2>
-              <p class="filter-category">Застосунок</p>
-            </a>
-          </li>
-        </ul>
+            <li>
+              <a href="">
+                <img
+                  src="./images/Portfolio/growing-bus.jpg"
+                  alt="Руки набирають текст на лептопі"
+                  width="370px"
+                />
+                <h2 class="project-name">Growing Business</h2>
+                <p class="filter-category">Застосунок</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
