--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
             ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a
           >
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link current">Студія</a></li>
-            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li><a href="./index.html" class="link">Студія</a></li>
+            <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
             <li><a href="" class="link">Контакти</a></li>
           </ul>
         </nav>
