--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
       <div class="container">
         <nav>
-          <a href="./index.html" class="logo"
+          <a href="./index.html"
             ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a
           >
           <ul class="site-nav list">
