Feat Features title
interim solution

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       </section>
 
       <!--Features-->
-      <section class="section">
+      <section class="section features">
         <div class="container">
           <h2 class="section-title">Company advantages</h2>
-          <ul class="features list">
+          <ul class="list">
             <li>
               <h3 class="title">Увага до деталей</h3>
               <p>Ідейні міркування, а також початок щоденної роботи з формування позиції.</p>
