--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
       <!-- Навігація -->
       <section>
         <div class="container">
-          <h1>Portfolio</h1>
+          <h1 class="section-title">Portfolio</h1>
           <ul class="filters list">
             <li><button type="button" class="button secondary">Всі</button></li>
             <li><button type="button" class="button secondary">Веб-сайти</button></li>
