Change using tag to classes for styles

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </nav>
 
         <ul class="list head-contacts">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="contacts-item">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="contacts-item">+38 096 111 11 11</a></li>
         </ul>
       </div>
     </header>
@@ -53,19 +53,25 @@
           <ul class="list">
             <li>
               <h3 class="title">Увага до деталей</h3>
-              <p>Ідейні міркування, а також початок щоденної роботи з формування позиції.</p>
+              <p class="feature-text">
+                Ідейні міркування, а також початок щоденної роботи з формування позиції.
+              </p>
             </li>
             <li>
               <h3 class="title">Пунктуальність</h3>
-              <p>Задачі з організації роботи, включаючи навчання персоналу.</p>
+              <p class="feature-text">Задачі з організації роботи, включаючи навчання персоналу.</p>
             </li>
             <li>
               <h3 class="title">Планування</h3>
-              <p>Головним чином консультування з широким інструментарієм найкращих практик.</p>
+              <p class="feature-text">
+                Головним чином консультування з широким інструментарієм найкращих практик.
+              </p>
             </li>
             <li>
               <h3 class="title">Сучасні технології</h3>
-              <p>Важливий і значущий засіб для досягнення запланованих цілей.</p>
+              <p class="feature-text">
+                Важливий і значущий засіб для досягнення запланованих цілей.
+              </p>
             </li>
           </ul>
         </div>
