Use paddings for <sections> from unify class .section
«B15» Для всіх секцій використовується один клас .section, задані верхні і нижні падінги по 94px, що відсувають контент всередину секції.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <main>
       <!--Hero-->
-      <section class="hero">
+      <section class="section hero">
         <h1 class="hero-title">Ефективні рішення<br />для вашого бізнесу</h1>
         <button type="button" class="button">Заказати послугу</button>
       </section>
@@ -78,7 +78,7 @@
       </section>
 
       <!--Areas \\  Сфери роботи компанії-->
-      <section class="section">
+      <section class="section areas">
         <div class="container">
           <h2 class="section-title">Чим ми займаємось</h2>
           <ul class="list">
