--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 
     <main class="portfolio">
       <!-- Навігація -->
-      <section>
+      <section class="section">
         <div class="container">
           <h1 class="section-title">Portfolio</h1>
           <ul class="filters list">
