Feat h1 for Portfolio
temporary solution with: display: none;

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,9 +39,9 @@
       </div>
     </header>
 
-    <main class="portfolio">
+    <main>
       <!-- Навігація -->
-      <section class="section">
+      <section class="section portfolio">
         <div class="container">
           <h1 class="section-title">Portfolio</h1>
           <ul class="filters list">
