--- a/index.html
+++ b/index.html
@@ -20,21 +20,25 @@
   <body>
     <!--Шапка сайту-->
     <header>
-      <div class="container">
-        <nav>
-          <a href="./index.html"
+      <div class="container main-nav">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo"
             ><span class="logo-blue">Web</span><span class="logo-black">Studio</span></a
           >
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link current">Студія</a></li>
-            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-            <li><a href="" class="link">Контакти</a></li>
+            <li class="item"><a href="./index.html" class="link current">Студія</a></li>
+            <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li class="item"><a href="" class="link">Контакти</a></li>
           </ul>
         </nav>
 
         <ul class="list head-contacts">
-          <li><a href="mailto:info@devstudio.com" class="contacts-item">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="contacts-item">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="contacts-item">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="contacts-item">+38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </header>
