Make styles for Portfolio: bnts & cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,17 +49,26 @@
         <div class="container">
           <h1 class="section-title">Portfolio</h1>
           <ul class="filters list">
-            <li><button type="button" class="button secondary">Всі</button></li>
-            <li><button type="button" class="button secondary">Веб-сайти</button></li>
-            <li><button type="button" class="button secondary">Застосунки</button></li>
-            <li><button type="button" class="button secondary">Дизайн</button></li>
-            <li><button type="button" class="button secondary">Маркетинг</button></li>
+            <li class="filter-btn"><button type="button" class="button secondary">Всі</button></li>
+            <li class="filter-btn">
+              <button type="button" class="button secondary">Веб-сайти</button>
+            </li>
+            <li class="filter-btn">
+              <button type="button" class="button secondary">Застосунки</button>
+            </li>
+            <li class="filter-btn">
+              <button type="button" class="button secondary">Дизайн</button>
+            </li>
+            <li class="filter-btn">
+              <button type="button" class="button secondary">Маркетинг</button>
+            </li>
           </ul>
 
           <ul class="list">
-            <li>
+            <li class="list-element">
               <a href="">
                 <img
+                  class="img-block"
                   src="./images/Portfolio/technokryak.jpg"
                   alt="Ноутбук з відкритим сайтом"
                   width="370px"
@@ -69,9 +78,10 @@
               </a>
             </li>
 
-            <li>
+            <li class="list-element">
               <a href="">
                 <img
+                  class="img-block"
                   src="./images/Portfolio/new-orlean.jpg"
                   alt="Два баскетболісти борються за м'яч"
                   width="370px"
@@ -81,9 +91,10 @@
               </a>
             </li>
 
-            <li>
+            <li class="list-element">
               <a href="">
                 <img
+                  class="img-block"
                   src="./images/Portfolio/seafood.jpg"
                   alt="Logo: The Seafood restaurant, est. 2001"
                   width="370px"
@@ -93,9 +104,10 @@
               </a>
             </li>
 
-            <li>
+            <li class="list-element">
               <a href="">
                 <img
+                  class="img-block"
                   src="./images/Portfolio/prime.jpg"
                   alt="Навушники повнорозмірні"
                   width="370px"
@@ -105,9 +117,10 @@
               </a>
             </li>
 
-            <li>
+            <li class="list-element">
               <a href="">
                 <img
+                  class="img-block"
                   src="./images/Portfolio/boxes.jpg"
                   alt="Дві коробки: біла та коричнева"
                   width="370px"
@@ -117,9 +130,10 @@
               </a>
             </li>
 
-            <li>
+            <li class="list-element">
               <a href="">
                 <img
+                  class="img-block"
                   src="./images/Portfolio/inspiration.jpg"
                   alt="Великий монітор-компю'ютер"
                   width="370px"
@@ -129,9 +143,10 @@
               </a>
             </li>
 
-            <li>
+            <li class="list-element">
               <a href="">
                 <img
+                  class="img-block"
                   src="./images/Portfolio/limited-adition.jpg"
                   alt="Розгорнутий журнал"
                   width="370px"
@@ -141,17 +156,23 @@
               </a>
             </li>
 
-            <li>
+            <li class="list-element">
               <a href="">
-                <img src="./images/Portfolio/lab.jpg" alt="Бірка: LAB EL TAG" width="370px" />
+                <img
+                  class="img-block"
+                  src="./images/Portfolio/lab.jpg"
+                  alt="Бірка: LAB EL TAG"
+                  width="370px"
+                />
                 <h2 class="project-name">Проект LAB</h2>
                 <p class="filter-category">Маркетинг</p>
               </a>
             </li>
 
-            <li>
+            <li class="list-element">
               <a href="">
                 <img
+                  class="img-block"
                   src="./images/Portfolio/growing-bus.jpg"
                   alt="Руки набирають текст на лептопі"
                   width="370px"
