Adding border portfolio-card & fix m&p for .card-block

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,8 +73,10 @@
                   alt="Ноутбук з відкритим сайтом"
                   width="370px"
                 />
-                <h2 class="project-name">Технокряк</h2>
-                <p class="filter-category">Веб-сайт</p>
+                <div class="card-block">
+                  <h2 class="project-name">Технокряк</h2>
+                  <p class="filter-category">Веб-сайт</p>
+                </div>
               </a>
             </li>
 
@@ -86,8 +88,10 @@
                   alt="Два баскетболісти борються за м'яч"
                   width="370px"
                 />
-                <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
-                <p class="filter-category">Дизайн</p>
+                <div class="card-block">
+                  <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+                  <p class="filter-category">Дизайн</p>
+                </div>
               </a>
             </li>
 
@@ -99,9 +103,11 @@
                   alt="Logo: The Seafood restaurant, est. 2001"
                   width="370px"
                 />
-                <h2 class="project-name">Ресторан Seafood</h2>
-                <p class="filter-category">Застосунок</p>
-              </a>
+                <div class="card-block">
+                  <h2 class="project-name">Ресторан Seafood</h2>
+                  <p class="filter-category">Застосунок</p>
+                </div></a
+              >
             </li>
 
             <li class="list-element">
@@ -112,9 +118,11 @@
                   alt="Навушники повнорозмірні"
                   width="370px"
                 />
-                <h2 class="project-name">Проект Prime</h2>
-                <p class="filter-category">Маркетинг</p>
-              </a>
+                <div class="card-block">
+                  <h2 class="project-name">Проект Prime</h2>
+                  <p class="filter-category">Маркетинг</p>
+                </div></a
+              >
             </li>
 
             <li class="list-element">
@@ -125,9 +133,11 @@
                   alt="Дві коробки: біла та коричнева"
                   width="370px"
                 />
-                <h2 class="project-name">Проект Boxes</h2>
-                <p class="filter-category">Застосунок</p>
-              </a>
+                <div class="card-block">
+                  <h2 class="project-name">Проект Boxes</h2>
+                  <p class="filter-category">Застосунок</p>
+                </div></a
+              >
             </li>
 
             <li class="list-element">
@@ -138,9 +148,11 @@
                   alt="Великий монітор-компю'ютер"
                   width="370px"
                 />
-                <h2 class="project-name">Inspiration has no Borders</h2>
-                <p class="filter-category">Веб-сайт</p>
-              </a>
+                <div class="card-block">
+                  <h2 class="project-name">Inspiration has no Borders</h2>
+                  <p class="filter-category">Веб-сайт</p>
+                </div></a
+              >
             </li>
 
             <li class="list-element">
@@ -151,9 +163,11 @@
                   alt="Розгорнутий журнал"
                   width="370px"
                 />
-                <h2 class="project-name">Видавництво Limited Edition</h2>
-                <p class="filter-category">Дизайн</p>
-              </a>
+                <div class="card-block">
+                  <h2 class="project-name">Видавництво Limited Edition</h2>
+                  <p class="filter-category">Дизайн</p>
+                </div></a
+              >
             </li>
 
             <li class="list-element">
@@ -164,9 +178,11 @@
                   alt="Бірка: LAB EL TAG"
                   width="370px"
                 />
-                <h2 class="project-name">Проект LAB</h2>
-                <p class="filter-category">Маркетинг</p>
-              </a>
+                <div class="card-block">
+                  <h2 class="project-name">Проект LAB</h2>
+                  <p class="filter-category">Маркетинг</p>
+                </div></a
+              >
             </li>
 
             <li class="list-element">
@@ -177,9 +193,11 @@
                   alt="Руки набирають текст на лептопі"
                   width="370px"
                 />
-                <h2 class="project-name">Growing Business</h2>
-                <p class="filter-category">Застосунок</p>
-              </a>
+                <div class="card-block">
+                  <h2 class="project-name">Growing Business</h2>
+                  <p class="filter-category">Застосунок</p>
+                </div></a
+              >
             </li>
           </ul>
         </div>
