Make positioning for Feature blocks

--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
         <div class="container">
           <h2 class="section-title">Company advantages</h2>
           <ul class="list">
-            <li>
+            <li class="feature-block">
               <h3 class="title">Увага до деталей</h3>
               <p class="feature-text">
                 Ідейні міркування, а також початок щоденної роботи з формування позиції.
               </p>
             </li>
-            <li>
+            <li class="feature-block">
               <h3 class="title">Пунктуальність</h3>
               <p class="feature-text">Задачі з організації роботи, включаючи навчання персоналу.</p>
             </li>
-            <li>
+            <li class="feature-block">
               <h3 class="title">Планування</h3>
               <p class="feature-text">
                 Головним чином консультування з широким інструментарієм найкращих практик.
               </p>
             </li>
-            <li>
+            <li class="feature-block">
               <h3 class="title">Сучасні технології</h3>
               <p class="feature-text">
                 Важливий і значущий засіб для досягнення запланованих цілей.
