--- a/portfolio.html
+++ b/portfolio.html
@@ -64,6 +64,7 @@
             </li>
           </ul>
 
+          <!-- Плитка робіт -->
           <ul class="list">
             <li class="list-element">
               <a href="">
