Make positioning for Areas

--- a/index.html
+++ b/index.html
@@ -86,14 +86,29 @@
         <div class="container">
           <h2 class="section-title">Чим ми займаємось</h2>
           <ul class="list">
-            <li>
-              <img src="./images/box1.jpg" alt="Десктопни застосунки" width="370" />
+            <li class="list-item">
+              <img
+                class="img-block"
+                src="./images/box1.jpg"
+                alt="Десктопни застосунки"
+                width="370"
+              />
             </li>
-            <li>
-              <img src="./images/box2.jpg" alt="Мобільні застосунки" width="370" />
+            <li class="list-item">
+              <img
+                class="img-block"
+                src="./images/box2.jpg"
+                alt="Мобільні застосунки"
+                width="370"
+              />
             </li>
-            <li>
-              <img src="./images/box3.jpg" alt="Дизайнерські рішення" width="370" />
+            <li class="list-item">
+              <img
+                class="img-block"
+                src="./images/box3.jpg"
+                alt="Дизайнерські рішення"
+                width="370"
+              />
             </li>
           </ul>
         </div>
