--- a/index.html
+++ b/index.html
@@ -118,38 +118,54 @@
       <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="team list">
-            <li>
+          <ul class="list">
+            <li class="element">
               <img
+                class="img-block"
                 src="./images/igor.jpg"
                 alt="Young man, around 35 years old with glasses and beard in burgundy shirt"
                 width="270"
               />
-              <h3 class="name">Ігор Дем'яненко</h3>
-              <p class="profession">Product Designer</p>
+              <div class="employee-desc">
+                <h3 class="name">Ігор Дем'яненко</h3>
+                <p class="profession">Product Designer</p>
+              </div>
             </li>
-            <li>
+            <li class="element">
               <img
+                class="img-block"
                 src="./images/olga.jpg"
                 alt="Young women with glasses, light hair till shoulders"
                 width="270"
               />
-              <h3 class="name">Ольга Репіна</h3>
-              <p class="profession">Frontend Developer</p>
+              <div class="employee-desc">
+                <h3 class="name">Ольга Репіна</h3>
+                <p class="profession">Frontend Developer</p>
+              </div>
             </li>
-            <li>
-              <img src="./images/nikolay.jpg" alt="Young smiling man in white shirt" width="270" />
-              <h3 class="name">Микола Тарасов</h3>
-              <p class="profession">Marketing</p>
-            </li>
-            <li>
+            <li class="element">
               <img
+                class="img-block"
+                src="./images/nikolay.jpg"
+                alt="Young smiling man in white shirt"
+                width="270"
+              />
+              <div class="employee-desc">
+                <h3 class="name">Микола Тарасов</h3>
+                <p class="profession">Marketing</p>
+              </div>
+            </li>
+            <li class="element">
+              <img
+                class="img-block"
                 src="./images/mikhail.jpg"
                 alt="Young man in glasses and black t-shirt"
                 width="270"
               />
-              <h3 class="name">Михайло Єрмаков</h3>
-              <p class="profession">UI Designer</p>
+              <div class="employee-desc">
+                <h3 class="name">Михайло Єрмаков</h3>
+                <p class="profession">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
