Fix Header & Ftr
Add border-bottom to Header;
Fix marging in ftr

--- a/index.html
+++ b/index.html
@@ -181,13 +181,17 @@
 
         <address class="ftr-address">
           <ul class="list">
-            <li>
+            <li class="ftr-item">
               <a href="https://goo.gl/maps/LaYwSsmEuTicvmq38" target="_blank" class="adress"
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li><a href="mailto:info@example.com" class="ftr-contacts">info@example.com</a></li>
-            <li><a href="tel:+380991111111" class="ftr-contacts">+38 099 111 11 11</a></li>
+            <li class="ftr-item">
+              <a href="mailto:info@example.com" class="ftr-contacts">info@example.com</a>
+            </li>
+            <li class="ftr-item">
+              <a href="tel:+380991111111" class="ftr-contacts">+38 099 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
